--- a/Practice02/src/style/sass/index.scss
+++ b/Practice02/src/style/sass/index.scss
@@ -9,10 +9,10 @@
 
 
 // Components
-@import './components/customer-feedbacks';
-@import './components/functions';
+@import './components/about-us-content';
+@import './components/function-feature';
 @import './components/product-feature';
-@import './components/social-icon';
+@import './components/banner-logo';
 
 
 // Layout
