--- a/Practice02/src/style/sass/layout/_about-us-section.scss
+++ b/Practice02/src/style/sass/layout/_about-us-section.scss
@@ -24,16 +24,17 @@
 h3 {
   color: var(--primary-color);
   width: 86%;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter';
   text-align: center;
   font-size: 24px;
   font-style: normal;
   font-weight: 600;
   line-height: 32px;
+  margin-top: -54px;
 }
 
 .install-app {
-  margin-right: 10px;
+  margin-right: 2px;
   display: flex;
   gap: 15px;
   flex-direction: column;
@@ -49,7 +50,7 @@ h3 {
 @media only screen and (min-width: 992px) {
   .install-section {
     width: 100%;
-    height: 289px;
+    height: 224px;
     flex-direction: row;
     margin-top: 0px;
 }
@@ -90,19 +91,22 @@ h3 {
 
 @media only screen and (min-width: 1400px) {
   .install-section {
-      max-width: 14%;
+      max-width: 77%;
       border-radius: 16px;
       flex-direction: row;
+      margin-right: 65px;
 }
   
   .install-app {
     flex-direction: row;
     margin-left: 86px;
+    margin-top: 4px;
+    margin-right: 5px;
 }
   h3 {
     width: 45%;
     margin-top: 28px;
-    margin-left: 25px;
+    margin-left: 65px;
   }
 
 }
