--- a/Practice02/src/style/sass/layout/_chart-section.scss
+++ b/Practice02/src/style/sass/layout/_chart-section.scss
@@ -5,13 +5,15 @@
   display: flex;
   flex-direction: column;
   height: 538px;
+  margin-top: 36px;
+  margin-right: 6px;
 }
 
 .chart__content {
   flex-direction: column;
   display: flex;
   order: 2;
-  margin-bottom: 6px;
+  margin-bottom: 39px;
   gap: 16px;
   align-items: center;
 }
@@ -19,7 +21,7 @@
 .chart-image {
   width: 384px;
   height: 260.648px;
-  margin-top: 32px;
+  margin-top: 35px;
   margin-left: 10px;
 }
 
@@ -36,19 +38,21 @@
   font-size: 18px;
   font-weight: 600;
   line-height: 24px;
-  margin-top: 32px;
+  margin-top: 42px;
+  margin-left: 8px;
 }
 
 .chart__content p {
   font-family: 'Inter';
   color: var(--river-bed);
-  width: 72%;
+  width: 73%;
   font-size: 16px;
   color: #4E5A65;
   text-align: center;
   font-weight: 400;
   line-height: 24px;
-  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 8px;
 }
 
 .chart-button {
@@ -64,6 +68,7 @@
   height: 52px;
   flex-shrink: 0;
   margin-bottom: 32px;
+  margin-left: 9px;
 }
 
 @media only screen and (min-width: 576px) {
