--- a/Practice02/src/style/sass/layout/_footer.scss
+++ b/Practice02/src/style/sass/layout/_footer.scss
@@ -27,9 +27,9 @@ footer {
   justify-content: space-around;
   display: flex;
   flex-direction: column;
-  margin-top: 50px;
-  margin-left: 20px;
-  gap: 37px;
+  margin-top: 46px;
+  margin-left: 21px;
+  gap: 34px;
 }
 
 .company p,
@@ -67,7 +67,7 @@ footer {
   border: 0.1px solid var(--primary-color);
   color: var(--primary-color);
   opacity: 0.1;
-  margin-bottom: -30px;
+  margin-top: 31px;
 }
 
 .social-icon {
@@ -90,6 +90,9 @@ footer {
   width: 20px;
 }
 
+.footer__copy-right {
+  margin-bottom: 10px;
+}
 @media only screen and (min-width: 992px) {
   footer {
       align-items: center;
@@ -225,6 +228,6 @@ footer {
 @media only screen and (min-width: 1400px) {
   .footer__content {
       align-items: center;
-      max-width: 19%;
+      max-width: 82%;
   }
 }
