--- a/Practice02/src/style/sass/layout/_header.scss
+++ b/Practice02/src/style/sass/layout/_header.scss
@@ -8,9 +8,9 @@
 }
 
 .header__logo {
-  width: 92px;
-  height: 24px;
-  margin-left: 30px;
+  width: 20px;
+  height: 15px;
+  margin-left: 15px;
   margin-top: 2px;
   cursor: pointer;
 }
@@ -39,8 +39,8 @@
 }
 
 .menu-icon {
-  margin-top: 15px;
-  margin-right: 30px;
+  margin-top: 22px;
+  margin-right: 9px;
   background: none;
   border: none;
   cursor: pointer;
@@ -155,7 +155,7 @@
   }
 
   .header-button:hover {
-      background-color: var(--Perano);
+      background-color: var(--perano);
   }
 
   .header__login-get-free a :hover {
@@ -182,22 +182,27 @@
 
 @media only screen and (min-width: 1400px) {
   .header {
-    width: 81%;
+    width: 100%;
+    height: 152px;
   }
   .header__logo {
     width: 92px;
     height: 25px;
-    margin-left: 21px;
-    margin-top: 0px;
+    margin-left: 6px;
+    margin-top: 3px;
 }
   .header__nav-list {
     margin-bottom: 6px;
     margin-left: 49px;
     gap: 23px;
-}
+} 
+
+  .header__nav {
+    margin-left: 51px;
+  }
 
   .header__login-get-free {
-    margin-right: 31px;
+    margin-right: 42px;
     margin-bottom: 0px;
     display: flex;
 }
