--- a/Practice02/src/style/sass/layout/_product-section.scss
+++ b/Practice02/src/style/sass/layout/_product-section.scss
@@ -4,13 +4,14 @@
   justify-content: center;
   align-items: center;
   background-color: #FBFAFE;
-  height: 878px;
+  height: 874px;
 }
 
 .timeline {
   border-radius: 4px;
   width: 384px;
   height: 303.094px;
+  margin-top: 92px;
 }
 
 .timeline img {
@@ -53,4 +54,14 @@
       width: 100%;
       height: 100%
   }
+}
+@media only screen and (min-width: 1400px) {
+  .product {
+    gap: 63px;
+    margin-right: 40px;
+}
+.timeline {
+  margin-right: 2px;
+  margin-top: 0px;
+}
 }
