--- a/Practice02/src/style/sass/components/_product-feature.scss
+++ b/Practice02/src/style/sass/components/_product-feature.scss
@@ -1,28 +1,83 @@
 .product__content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-left: 10px;
-    margin-bottom: 11px;
+  flex-direction: column;  
+  @extend %flex-center;
+  margin-left: 0px;
+  margin-bottom: 11px;
+  margin-right: 4px;
+  margin-top: 23px;
+}
+
+.ad-feature p {
+  width: 308px;
+  color: var(--river-bed);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  font-family: "Inter", sans-serif;
+  margin-left: 31px;
+  margin-top: 6px;
+}
+
+.ad-feature:hover {
+  background-color: #F6F3FC;
+  border-bottom: 8px solid var(--violet);
+  border-radius: 8px 8px 0px 0px;
+}
+
+.ad-feature h4 {
+  font-size: 18px;
+  font-family: 'Inter';
+  font-weight: 600;
+  line-height: 26px;
+  margin-bottom: 1px;
+  margin-top: 5px;
+}
+
+.ad-feature {
+  text-align: center;
+  margin-top: 1px;
+  width: 368px;
+  height: 128px;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  margin-right: 1px;
+  border-bottom: 8px solid transparent;
+}
+
+.line {
+  width: 368px;
+}
+
+@media only screen and (min-width: 992px) {
+  .product__content {
+      flex-direction: column;
+      margin-right: 21px;
+      display: flex;
+      margin-top: -3px;
   }
-  
+
   .ad-feature p {
-      width: 308px;
       color: var(--river-bed);
       font-size: 16px;
-      font-style: normal;
       font-weight: 400;
       line-height: 24px;
-      font-family: "Inter", sans-serif;
-      margin-left: 31px;
-      margin-top: 6px;
   }
-  
+
+  .ad-feature {
+      text-align: left;
+      margin-top: 0px;
+      width: 368px;
+      height: 128px;
+      border-left: 8px solid transparent;
+  }
+
   .ad-feature:hover {
-    background-color: #F6F3FC;
-    border-bottom: 8px solid var(--violet);
-    border-radius: 8px 8px 0px 0px;
+      background-color: #F6F3FC;
+      border-bottom: 8px solid transparent;
+      border-left: 8px solid var(--violet);
+      border-radius: 0px 8px 8px 0px;
   }
 
   .ad-feature h4 {
@@ -30,80 +85,33 @@
       font-family: 'Inter';
       font-weight: 600;
       line-height: 26px;
-      margin-bottom: 1px;
-      margin-top: 5px;
+      margin-bottom: 0px;
+      margin-left: 23px;
+      margin-top: 2px;
   }
-  
-  .ad-feature {
-    text-align: center;
-    margin-top: 1px;
-    width: 368px;
-    height: 128px;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-    margin-right: 14px;
-  }
-  
+
   .line {
-    width: 368px;
+      margin-left: 17px;
   }
 
-@media only screen and (min-width: 992px) {
+}
+
+@media only screen and (min-width: 1400px) {
   .product__content {
-    flex-direction: column;
-    margin-right: 21px;
-    display: flex;
-    margin-top: -3px;
-}
+      margin-right: 16px;
+      margin-top: 24px;
+  }
 
-.ad-feature p {
-    color: var(--river-bed);
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-}
+  .ad-feature p {
+      margin-left: 28px;
+  }
 
-.ad-feature {
-  text-align: left;
-  margin-top: 0px;
-  width: 368px;
-  height: 128px;
-}
-
-.ad-feature:hover {
-  background-color: #F6F3FC;
-  border-left: 8px solid var(--violet);
-  border-bottom: none;
-  border-radius: 0px 8px 8px 0px;
-}
-
-.ad-feature h4 {    
-    font-size: 18px;
-    font-family: 'Inter';
-    font-weight: 600;
-    line-height: 26px;
-    margin-bottom: 0px;
-    margin-left: 23px;
-    margin-top: 2px;
-}
-
-.line {
-    margin-left: 17px;
-}
-
-}
-
-@media only screen and (min-width: 992px) {
-  .product__content {
-    margin-right: 16px;
-    margin-top: 24px;
-}
-.ad-feature p {
-    margin-left: 28px;}
-.ad-feature h4 {
+  .ad-feature h4 {
       margin-left: 29px;
       margin-top: 0px;
+  }  
+  .product__content {
+      margin-right: 56px;
+      margin-top: 28px;
   }
 }
-
