--- a/Practice02/src/style/sass/pages/landingpage/_about-us-section.scss
+++ b/Practice02/src/style/sass/pages/landingpage/_about-us-section.scss
@@ -1,20 +1,16 @@
 .about-us {
-  flex-direction: column;
+  @extend %flex-column;
   justify-content: space-between;
-  align-items: center;
   width: 100%;
-  display: flex;
   margin-top: 50px;
 }
 
 .install-section {
+  @extend %flex-column;
   background-color: #796EFF;
   justify-content: space-evenly;
-  align-items: center; 
   width: 100%;
-  height: 292px;
-  display: flex;
-  flex-direction: column;
+  height: 292px; 
   background-repeat: no-repeat;
   margin-top: 56px;
   margin-right: 12px;
@@ -42,26 +38,25 @@ h3 {
 
 @media only screen and (min-width: 576px) {
   .install-section {
-    width: 100%;
-    height: 350px;
+      width: 100%;
+      height: 350px;
   }
 }
 
 @media only screen and (min-width: 992px) {
   .install-section {
-    width: 100%;
-    height: 224px;
-    flex-direction: row;
-    margin-top: 0px;
-}
+      width: 100%;
+      height: 224px;
+      flex-direction: row;
+      margin-top: 0px;
+  }
+
   .about-us {
-      flex-direction: column;
+      @extend %flex-column;
       justify-content: space-between;
-      align-items: center;
       gap: 6px;
       width: 100%;
       height: 786px;
-      display: flex;
       margin: auto;
       margin-bottom: 100px;
   }
@@ -75,7 +70,8 @@ h3 {
       font-weight: 600;
       line-height: 48px;
       margin-left: 44px;
-      margin-bottom: 30px;
+      margin-bottom: 0px;
+      margin-top: 1px;
   }
 
   .install-app {
@@ -91,42 +87,21 @@ h3 {
 
 @media only screen and (min-width: 1400px) {
   .install-section {
-      max-width: 77%;
+      max-width: 1110px;
       border-radius: 16px;
       flex-direction: row;
       margin-right: 65px;
-}
-  
-  .install-app {
-    flex-direction: row;
-    margin-left: 86px;
-    margin-top: 4px;
-    margin-right: 5px;
-}
-  h3 {
-    width: 45%;
-    margin-top: 28px;
-    margin-left: 65px;
   }
 
-}
-/*  .install-section {
-    background-image: url(../../assets/image/install-section.png);
-      justify-content: space-evenly;
-      align-items: left;
-      width: 58.3%;
-      height: 224px;
-      border-radius: 16px;
+  .install-app {
       flex-direction: row;
-      margin-right: 10px;
+      margin-left: 88px;
+      margin-top: 2px;
+      margin-right: 5px;
   }
-    .install-section {
-    background-image: url(../../assets/image/install-section.png);
-      justify-content: space-evenly;
-      align-items: left;
-      width: 90%;
-      height: 224px;
-      border-radius: 16px;
-      flex-direction: row;
-      margin-right: 10px;
-  }*/
+
+  h3 {
+      width: 45%;
+      margin-left: 60px;
+  }
+}
