--- a/Practice02/src/style/sass/pages/landingpage/_product-section.scss
+++ b/Practice02/src/style/sass/pages/landingpage/_product-section.scss
@@ -1,8 +1,6 @@
 .product {
-  display: flex;
+  @extend %flex-center;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
   background-color: #FBFAFE;
   height: 874px;
 }
@@ -11,7 +9,7 @@
   border-radius: 4px;
   width: 384px;
   height: 303.094px;
-  margin-top: 92px;
+  margin-top: 29px;
 }
 
 .timeline img {
@@ -21,23 +19,21 @@
 
 @media only screen and (min-width: 576px) {
   .timeline {
-    margin-top: 32px;
-    border-radius: 4px;
-    width: 434px;
-    height: 333.094px;
+      margin-top: 32px;
+      border-radius: 4px;
+      width: 434px;
+      height: 333.094px;
   }
 }
 
 
 @media only screen and (min-width: 992px) {
   .product {
-      display: flex;
+      @extend %flex-center;
       flex-direction: row;
-      align-items: center;
       width: 100%;
       height: 641px;
       gap: 74px;
-      justify-content: center;
       margin: auto;
   }
 
@@ -55,13 +51,15 @@
       height: 100%
   }
 }
+
 @media only screen and (min-width: 1400px) {
   .product {
-    gap: 63px;
-    margin-right: 40px;
-}
-.timeline {
-  margin-right: 2px;
-  margin-top: 0px;
-}
+      gap: 63px;
+      
+  }
+
+  .timeline {
+      margin-right: 12px;
+      margin-top: 0px;
+  }
 }
