Fix hover border done

--- a/Practice02/src/style/sass/components/_function-feature.scss
+++ b/Practice02/src/style/sass/components/_function-feature.scss
@@ -117,4 +117,15 @@
   .feature__descripstion__hidden p {
       width: 102%;
   }
+
+  .feature__descripstion {
+    margin-top: 12px;
+    margin-bottom: 14px;
+    margin-right: 21px;
+  }
+
+  .feature__descripstion__hidden {
+    margin-top: 16px;
+    margin-right: 18px;
+}
 }
