--- a/Practice02/src/style/sass/pages/landingpage/_chart-section.scss
+++ b/Practice02/src/style/sass/pages/landingpage/_chart-section.scss
@@ -120,10 +120,11 @@
       font-weight: 600;
       line-height: 48px;
       margin-left: -8px;
+      margin-top: 23px;
   }
 
   .chart__content p {
-      width: 413px;
+      width: 415px;
       color: #4E5A65;
       text-align: left;
       margin-top: 0px;
