--- a/Practice02/src/style/sass/layout/_footer.scss
+++ b/Practice02/src/style/sass/layout/_footer.scss
@@ -151,7 +151,7 @@ footer {
         flex-direction: column;
         cursor: pointer;
         justify-content: center;
-        gap: 25px;
+        gap: 20px;
     }
 
     .company {
@@ -159,20 +159,21 @@ footer {
     }
 
     .support {
-        margin-right: 60px;
-        margin-bottom: 40px;
+        margin-right: 32px;
+        margin-bottom: 35px;
     }
 
     .legal {
         margin-right: 49px;
-        margin-bottom: 40px;
+        margin-bottom: 38px;
     }
 
     .app {
-        margin-right: 17px; 
         display: flex;
         flex-direction: column;
-        margin-top: 15px;
+        margin-top: 14px;
+        margin-left: 6px;
+        gap: 9px
     }
 
     .footer__install-app {
@@ -199,7 +200,6 @@ footer {
     .footer__copy-right {
         justify-content: space-around;
         display: flex;
-        max-width: 88%;
     }
 
     .copy-right {
@@ -227,17 +227,50 @@ footer {
     .footer__content {
         align-items: center;
         max-width: 816px;
-        margin-top: 51px;
-        gap: 130px;
+        margin-top: 47px;
+        gap: 102px;
+    }
+
+    .company {
+        margin-left: 1px;
+        margin-right: 5px;
+        margin-bottom: 7px;
+    }
+
+    .support {
+        margin-right: 30px;
+        margin-bottom: 42px;
+    }
+
+    .legal {
+        margin-right: 52px;
+        margin-bottom: 47px;
     }
 
     .app {
         margin-top: 14px;
-        margin-left: 76px;
+        margin-left: 0px;
+        margin-right: 108px;
         gap: 9px
     }
 
     .line-footer {
         margin-top: 16px;
     }
+
+    .footer__copy-right {
+        width: 1440px;
+        margin-right: 47px;
+        gap: 152px;
+    }
+
+    .copy-right {
+        margin-top: 11px;
+        margin-left: 43px;
+    }
+    
+    .social-icon {
+        margin-top: 20px;
+    }
+    
 }
