--- a/Practice02/src/style/sass/layout/_header.scss
+++ b/Practice02/src/style/sass/layout/_header.scss
@@ -61,6 +61,10 @@
 }
 
 @media only screen and (min-width: 576px) {
+  .header {
+    width: 100%;
+  }
+
   .header__logo {
       margin-top: 10px;
   }
