Fix width height img

--- a/Practice02/src/style/sass/components/_about-us-content.scss
+++ b/Practice02/src/style/sass/components/_about-us-content.scss
@@ -51,6 +51,11 @@
   margin-top: 20px;
 }
 
+.customer-ava img {
+  width: 100%;
+  height: auto;
+}
+
 .customer-pro {
   display: flex;
   flex-direction: column;
