--- a/Practice02/src/style/sass/components/_product-feature.scss
+++ b/Practice02/src/style/sass/components/_product-feature.scss
@@ -50,6 +50,11 @@
   border-bottom: 8px solid transparent;
 }
 
+.ad-feature img {
+  width: 86%;
+  height: auto;
+}
+
 .line {
   width: 368px;
 }
@@ -95,7 +100,7 @@
       font-weight: 600;
       line-height: 26px;
       margin-bottom: 0px;
-      margin-left: 23px;
+      margin-left: 30px;
       margin-top: 2px;
   }
 
