--- a/Practice02/src/style/sass/layout/_banner.scss
+++ b/Practice02/src/style/sass/layout/_banner.scss
@@ -247,6 +247,11 @@ input[type=text] {
       padding-bottom: 3px;
   }
 
+  .banner__get-acc img {
+    width: 8px;
+    height: 9.901px;
+  }
+
   .banner__save p {
       padding: 5px 0px 0px 3px;
   }
