--- a/Practice02/src/style/sass/layout/_footer.scss
+++ b/Practice02/src/style/sass/layout/_footer.scss
@@ -77,6 +77,11 @@ footer {
     display: none;
 }
 
+.social-icon img {
+    width: 100%;
+    height: auto;
+}
+
 .copy-right {
     color: #D9DBE1;
     margin-left: 32px;
