--- a/Practice02/src/style/sass/layout/_header.scss
+++ b/Practice02/src/style/sass/layout/_header.scss
@@ -25,6 +25,11 @@
   display: none;
 }
 
+.header__nav-list img {
+  width: 8px;
+  height: 8px;
+}
+
 .header__login-get-free a {
   display: none;
 }
@@ -72,6 +77,7 @@
   .header__logo img {
       object-fit: fill;
       width: 110px;
+      height: auto;
   }
 
   .menu-icon {
@@ -107,6 +113,7 @@
   .header__logo img {
       object-fit: fill;
       width: 90px;
+      height: auto;
   }
 
   .header__nav {
