Fix arrow footer

--- a/Practice02/src/style/sass/layout/_footer.scss
+++ b/Practice02/src/style/sass/layout/_footer.scss
@@ -32,6 +32,13 @@ footer {
     gap: 34px;
 }
 
+.company img,
+.support img,
+.legal img {
+    width: 14px;
+    height: 15.901px;
+}
+
 .company p,
 .support p,
 .legal p,
