--- a/Practice02/src/style/sass/layout/_banner.scss
+++ b/Practice02/src/style/sass/layout/_banner.scss
@@ -1,5 +1,5 @@
 .banner {
-  background-image: url(../../../../Practice02/src/assets/image/bgbanner.png);
+  background-image: url(../../assets/image/bgbanner.png);
   background-repeat: no-repeat;
   background-size: 100% 86%;
   border: 1px;
