--- a/Practice02/src/style/sass/layout/_footer.scss
+++ b/Practice02/src/style/sass/layout/_footer.scss
@@ -27,7 +27,7 @@ footer {
     justify-content: space-around;
     display: flex;
     flex-direction: column;
-    margin-top: 55px;
+    margin-top: 44px;
     margin-left: 21px;
     gap: 34px;
 }
@@ -60,13 +60,18 @@ footer {
 .footer__install-app {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 15px;
     margin-left: 30px;
-    margin-top: 18px;
+    margin-top: 8px;
     margin-bottom: 20px;
     object-fit: fill;
     width: 100px;
     height: 100px;
+}
+
+.footer__install-app img {
+    width: 180px;
+    height: 53.333px;
 }
 
 .vector {
@@ -106,7 +111,7 @@ footer {
 }
 
 .footer__copy-right {
-    margin-bottom: 10px;
+    margin-bottom: 3px;
 }
 
 @media only screen and (min-width: 992px) {
@@ -165,7 +170,7 @@ footer {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        gap: 20px;
+        gap: 25px;
     }
 
     .company {
@@ -216,7 +221,7 @@ footer {
         height: 14px;
         margin-top: 20px;
         margin-left: 6px;
-        font-size: 15px;
+        font-size: 14px;
     }
 
     .social-icon {
@@ -236,19 +241,19 @@ footer {
     .footer__content {
         align-items: center;
         max-width: 816px;
-        margin-top: 47px;
+        margin-top: 38px;
         gap: 102px;
     }
 
     .company {
-        margin-left: 1px;
+        margin-left: 16px;
         margin-right: 5px;
-        margin-bottom: 7px;
+        margin-bottom: 8px;
     }
 
     .support {
-        margin-right: 30px;
-        margin-bottom: 42px;
+        margin-right: 25px;
+        margin-bottom: 46px;
     }
 
     .legal {
@@ -257,10 +262,10 @@ footer {
     }
 
     .app {
-        margin-top: 14px;
-        margin-left: 0px;
+        margin-top: 2px;
+        margin-left: 5px;
         margin-right: 108px;
-        gap: 9px
+        gap: 15px
     }
 
     .line-footer {
@@ -276,10 +281,15 @@ footer {
     .copy-right {
         margin-top: 11px;
         margin-left: 43px;
+        margin-bottom: 7px;
     }
     
     .social-icon {
-        margin-top: 20px;
+        margin-top: 22px;
     }
-    
+
+    .footer__install-app img {
+        width: 161.999px;
+        height: 48px;
+    }
 }
