--- a/Practice02/src/style/sass/pages/landingpage/_chart-section.scss
+++ b/Practice02/src/style/sass/pages/landingpage/_chart-section.scss
@@ -1,6 +1,6 @@
 .charts {
   @extend %flex-center;
-  background-color: #fbfafe;;
+  background-color: var(--big-background);
   flex-direction: column;
   height: 538px;
   margin-top: 27px;
@@ -11,8 +11,8 @@
 .chart__content {
   @extend %flex-column;
   order: 2;
-  margin-bottom: 39px;
-  gap: 16px;
+  margin-bottom: 33px;
+  gap: 14px;
 }
 
 .chart-image {
@@ -48,7 +48,7 @@
   text-align: center;
   font-weight: 400;
   line-height: 24px;
-  margin-bottom: 5px;
+  margin-bottom: 2px;
   margin-left: 8px;
 }
 
@@ -64,7 +64,7 @@
   width: 318px;
   height: 52px;
   flex-shrink: 0;
-  margin-bottom: 32px;
+  margin-bottom: 41px;
   margin-left: 9px;
 }
 
