--- a/Practice02/src/style/sass/layout/_banner.scss
+++ b/Practice02/src/style/sass/layout/_banner.scss
@@ -5,87 +5,118 @@
   border: 1px;
   margin-top: -12px;
   margin-bottom: 60px;
-}
 
-.banner__sign-up {
-  flex-direction: column;
-  @extend %flex-center;
-}
+  &__sign-up {
+      flex-direction: column;
+      @extend %flex-center;
+  }
 
-.banner__discount {
-  justify-content: center;
-  align-items: flex-end;
-  width: 100%;
-  height: 80px;
-  display: flex;
-  margin-top: 10px;
-}
+  &__discount {
+      justify-content: center;
+      align-items: flex-end;
+      width: 100%;
+      height: 80px;
+      display: flex;
+      margin-top: 10px;
+  }
 
-.banner__save {
-  display: none;
-}
+  &__save {
+      display: none;
+  }
 
-.banner__get-acc {
-  @extend %flex-center;
-  width: 160px;
-  height: 21px;
-  background-color: #F2F9EB;
-  color: var(--Limed-Spruce);
-  text-decoration: none;
-  text-align: center;
-  cursor: pointer;
-  border-radius: 100px;
-}
+  &__get-acc {
+      @extend %flex-center;
+      width: 160px;
+      height: 21px;
+      background-color: #F2F9EB;
+      color: var(--Limed-Spruce);
+      text-decoration: none;
+      text-align: center;
+      cursor: pointer;
+      border-radius: 100px;
+  }
 
-.banner__get-acc a {
-  background-color: #F2F9EB;
-  color: #35414B;
-  font-family: 'Inter';
-  font-size: 13px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 13px;
-  color: var(--Limed-Spruce);
-  text-decoration: none;
-}
+  &__get-acc a {
+      background-color: #F2F9EB;
+      color: #35414B;
+      font-family: 'Inter';
+      font-size: 13px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 13px;
+      color: var(--Limed-Spruce);
+      text-decoration: none;
+  }
 
-.banner__content {
-  flex-direction: column;
-  @extend %flex-center;
-  height: 218px;
-  margin-top: 14px;
-  margin-right: 5px;
-}
+  &__content {
+      flex-direction: column;
+      @extend %flex-center;
+      height: 218px;
+      margin-top: 14px;
+      margin-right: 5px;
+  }
 
-.banner__heading {
-  width: 71%;
-  color: var(--Limed-Spruce);
-  text-align: center;
-  font-family: 'Inter';
-  font-size: 32px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 40px;
-}
+  &__heading {
+      width: 71%;
+      color: var(--Limed-Spruce);
+      text-align: center;
+      font-family: 'Inter';
+      font-size: 32px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 40px;
+  }
 
-.banner__simple-text {
-  text-align: center;
-  color: var(--river-bed);
-  font-family: 'Inter';
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px;
-  width: 78%;
-  margin-top: 15px;
-}
+  &__simple-text {
+      text-align: center;
+      color: var(--river-bed);
+      font-family: 'Inter';
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 24px;
+      width: 78%;
+      margin-top: 15px;
+  }
 
-.banner__box {
-  justify-content: center;
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-  margin-top: 10px;
+  &__box {
+      justify-content: center;
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+      margin-top: 10px;
+  }
+
+  &__media-logo {
+      flex-direction: column;
+      justify-content: center;
+      width: 414px;
+      display: flex;
+      margin-top: 40px;
+  }
+
+  &__media-logo p {
+      text-align: center;
+      color: var(--river-bed);
+      letter-spacing: 0;
+      font-family: 'Inter';
+      font-size: 11px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 11px;
+  }
+
+  &__media-logo b {
+      letter-spacing: 0;
+      text-align: center;
+      color: var(--river-bed);
+      font-family: 'Inter';
+      font-size: 11px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 11px;
+  }
+
 }
 
 .text-box {
@@ -134,36 +165,6 @@ input[type=text] {
   height: 100%;
 }
 
-.banner__media-logo {
-  flex-direction: column;
-  justify-content: center;
-  width: 414px;
-  display: flex;
-  margin-top: 40px;
-}
-
-.banner__media-logo p {
-  text-align: center;
-  color: var(--river-bed);
-  letter-spacing: 0;
-  font-family: 'Inter';
-  font-size: 11px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 11px;
-}
-
-.banner__media-logo b {
-  letter-spacing: 0;
-  text-align: center;
-  color: var(--river-bed);
-  font-family: 'Inter';
-  font-size: 11px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 11px;
-}
-
 ::placeholder {
   font-family: 'Inter';
   font-weight: 400;
@@ -177,22 +178,22 @@ input[type=text] {
   .banner {
       background-image: url(../../../../Practice02/src/assets/image/bgbanner.png);
       background-size: 100% 60%;
-  }
 
-  .banner__heading {
-      font-size: 42px;
-      width: 86%;
-      line-height: 50px;
+      &__heading {
+          font-size: 42px;
+          width: 86%;
+          line-height: 50px;
+      }
+
+      &__simple-text {
+          width: 79%;
+          margin-top: 16px;
+      }
   }
 
   .graph {
       width: 472px;
       height: 361.288px;
-  }
-
-  .banner__simple-text {
-      width: 79%;
-      margin-top: 16px;
   }
 }
 
@@ -203,103 +204,117 @@ input[type=text] {
       margin: auto;
       margin-bottom: 100px;
       margin-top: -9px;
-  }
 
-  .banner__save {
-      display: block;
-      text-align: center;
-      color: var(--primary-color);
-      z-index: 1;
-      background-color: #81C43B;
-      border-radius: 100px;
-      width: 108px;
-      height: 33px;
-      position: sticky;
-  }
+      &__save {
+          display: block;
+          text-align: center;
+          color: var(--primary-color);
+          z-index: 1;
+          background-color: #81C43B;
+          border-radius: 100px;
+          width: 108px;
+          height: 33px;
+          position: sticky;
+      }
 
-  .banner__get-acc {
-      width: 198px;
-      height: 34px;
-      margin-left: -15px;
-      border-radius: 0px 100px 100px 0px;
-  }
+      &__get-acc {
+          width: 198px;
+          height: 34px;
+          margin-left: -15px;
+          border-radius: 0px 100px 100px 0px;
+      }
 
-  .banner__discount {
-      justify-content: center;
-      align-items: flex-end;
-      width: 69%;
-      height: 79px;
-      margin-left: 10px;
-      display: flex;
-  }
+      &__discount {
+          justify-content: center;
+          align-items: flex-end;
+          width: 69%;
+          height: 79px;
+          margin-left: 10px;
+          display: flex;
+      }
 
-  .banner__get-acc a {
-      font-family: 'Inter';
-      font-size: 16px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 16px;
-      text-decoration: none;
-      color: var(--Limed-Spruce);
-  }
+      &__get-acc a {
+          font-family: 'Inter';
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 16px;
+          text-decoration: none;
+          color: var(--Limed-Spruce);
+      }
 
-  .banner__get-acc p {
-      padding-bottom: 3px;
-  }
+      &__get-acc p {
+          padding-bottom: 3px;
+      }
 
-  .banner__get-acc img {
-    width: 8px;
-    height: 9.901px;
-  }
+      &__get-acc img {
+          width: 8px;
+          height: 9.901px;
+      }
 
-  .banner__save p {
-      padding: 5px 0px 0px 3px;
-  }
+      &__save p {
+          padding: 5px 0px 0px 3px;
+      }
 
-  .banner__get-acc p:hover {
-      width: 198px;
-      height: 24px;
-      border-radius: 0px 100px 100px 0px;
-      padding-top: 5px;
-  }
+      &__get-acc p:hover {
+          width: 198px;
+          height: 24px;
+          border-radius: 0px 100px 100px 0px;
+          padding-top: 5px;
+      }
 
+      &__content {
+          gap: 23px;
+          height: 270px;
+      }
 
-  .banner__content {
-      gap: 23px;
-      height: 270px;
-  }
+      &__heading {
+          width: 786px;
+          height: 144px;
+          margin-right: 0px;
+          font-size: 67px;
+          font-weight: 700;
+          line-height: 70px;
+      }
 
+      &__simple-text {
+          color: var(--river-bed);
+          font-family: 'Inter';
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 25px;
+          width: 52%;
+          height: 48px;
+          margin-bottom: 5px;
+          margin-right: 34px;
+          margin-top: 0px;
+      }
 
-  .banner__heading {
-      width: 786px;
-      height: 144px;
-      margin-right: 0px;
-      font-size: 67px;
-      font-weight: 700;
-      line-height: 70px;
-  }
+      &__box {
+          justify-content: center;
+          display: inline;
+          height: 60px;
+          margin-right: 53px;
+          margin-top: -6px;
+          margin-bottom: -9px;
+      }
 
-  .banner__simple-text {
-      color: var(--river-bed);
-      font-family: 'Inter';
-      font-size: 16px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 25px;
-      width: 52%;
-      height: 48px;
-      margin-bottom: 5px;
-      margin-right: 34px;
-      margin-top: 0px;
-  }
+      &__media-logo {
+          width: 96%;
+          margin-top: 61px;
+      }
 
-  .banner__box {
-      justify-content: center;
-      display: inline;
-      height: 60px;
-      margin-right: 53px;
-      margin-top: -6px;
-      margin-bottom: -9px;
+      &__media-logo p {
+          font-size: 16px;
+          font-style: normal;
+          line-height: 16px;
+      }
+
+      &__media-logo b {
+          font-size: 16px;
+          line-height: 16px;
+      }
   }
 
   .text-box {
@@ -337,22 +352,6 @@ input[type=text] {
       display: flex;
   }
 
-  .banner__media-logo {
-      width: 96%;
-      margin-top: 61px;
-  }
-
-  .banner__media-logo p {
-      font-size: 16px;
-      font-style: normal;
-      line-height: 16px;
-  }
-
-  .banner__media-logo b {
-      font-size: 16px;
-      line-height: 16px;
-  }
-
   ::placeholder {
       padding: 18px 99px 18px 2px;
   }
@@ -378,11 +377,11 @@ input[type=text] {
   }
 
   .banner__simple-text {
-      margin-right: 53px;
+      margin-right: 51px;
   }
 
   .graph {
       margin-right: 54px;
-      margin-top: 10px;
+      margin-top: 8px;
   }
 }
