--- a/Practice02/src/style/sass/layout/_header.scss
+++ b/Practice02/src/style/sass/layout/_header.scss
@@ -5,39 +5,40 @@
   height: 54px;
   margin-top: 13px;
   display: flex;
+
+  &__logo {
+      width: 20px;
+      height: 15px;
+      margin-left: 15px;
+      margin-top: 6px;
+      cursor: pointer;
+  }
+
+  &__logo img {
+      width: 77px;
+      height: auto;
+  }
+
+  &__nav {
+      display: none;
+      margin-left: 32px;
+      margin-top: 10px;
+
+      &__nav-list {
+          display: none;
+      }
+
+      &__nav-list img {
+          width: 8px;
+          height: 8px;
+      }
+  }
+
+  &__login-get-free a {
+      display: none;
+  }
 }
 
-.header__logo {
-  width: 20px;
-  height: 15px;
-  margin-left: 15px;
-  margin-top: 6px;
-  cursor: pointer;
-}
-
-.header__logo img {
-  width: 77px;
-  height: auto;
-}
-
-.header__nav {
-  display: none;
-  margin-left: 32px;
-  margin-top: 10px;
-}
-
-.header__nav-list {
-  display: none;
-}
-
-.header__nav-list img {
-  width: 8px;
-  height: 8px;
-}
-
-.header__login-get-free a {
-  display: none;
-}
 
 .header-button {
   display: none;
@@ -72,17 +73,18 @@
 
 @media only screen and (min-width: 576px) {
   .header {
-    width: 100%;
-  }
+      width: 100%;
 
-  .header__logo {
-      margin-top: 10px;
-  }
+      &__logo {
+          margin-top: 10px;
+      }
 
-  .header__logo img {
-      object-fit: fill;
-      width: 110px;
-      height: auto;
+      &__logo img {
+          object-fit: fill;
+          width: 110px;
+          height: auto;
+      }
+
   }
 
   .menu-icon {
@@ -106,25 +108,47 @@
       height: 158px;
       margin: auto;
       display: flex;
-  }
 
-  .header__logo {
-      width: 92px;
-      height: 24px;
-      margin-left: 20px;
-      margin-top: 0px;
-  }
+      &__logo {
+          width: 92px;
+          height: 24px;
+          margin-left: 20px;
+          margin-top: 0px;
+      }
 
-  .header__logo img {
-      object-fit: fill;
-      width: 90px;
-      height: 20px;
-  }
+      &__logo img {
+          object-fit: fill;
+          width: 90px;
+          height: 20px;
+      }
 
-  .header__nav {
-      display: block;
-      margin-left: 37px;
-      margin-top: 10px;
+      &__nav {
+          display: block;
+          margin-left: 37px;
+          margin-top: 10px;
+      }
+
+      &__login-get-free {
+          margin-right: 5px;
+          margin-bottom: 0px;
+          display: flex;
+      }
+
+      &__login-get-free a {
+          display: block;
+          color: var(--Limed-Spruce);
+          opacity: 0.7;
+          margin-right: 19px;
+          font-size: 16px;
+          font-weight: 400;
+          line-height: 16px;
+          text-decoration: none;
+          margin-top: 18px;
+      }
+
+      &__login-get-free a:hover {
+          color: var(--black);
+      }
   }
 
   .header__nav-list {
@@ -152,34 +176,8 @@
       color: black;
   }
 
-  .header__nav {
-      display: flex;
-  }
-
-  .header__login-get-free {
-      margin-right: 5px;
-      margin-bottom: 0px;
-      display: flex;
-  }
-
-  .header__login-get-free a {
-      display: block;
-      color: var(--Limed-Spruce);
-      opacity: 0.7;
-      margin-right: 19px;
-      font-size: 16px;
-      font-weight: 400;
-      line-height: 16px;
-      text-decoration: none;
-      margin-top: 18px;
-  }
-
   .header-button:hover {
       background-color: var(--perano);
-  }
-
-  .header__login-get-free a :hover {
-      color: var(--black);
   }
 
   .header-button {
@@ -206,28 +204,28 @@
   .header {
       width: 100%;
       height: 152px;
-  }
 
-  .header__logo {
-      width: 92px;
-      height: 25px;
-      margin-left: 6px;
-      margin-top: 3px;
-  }
+      &__logo {
+          width: 92px;
+          height: 25px;
+          margin-left: 6px;
+          margin-top: 3px;
+      }
 
-  .header__nav-list {
-      margin-bottom: 6px;
-      margin-left: 49px;
-      gap: 23px;
-  }
+      &__nav {
+          margin-left: 51px;
+      }
 
-  .header__nav {
-      margin-left: 51px;
-  }
+      &__nav-list {
+          margin-bottom: 6px;
+          margin-left: 49px;
+          gap: 23px;
+      }
 
-  .header__login-get-free {
-      margin-right: 42px;
-      margin-bottom: 0px;
-      display: flex;
+      &__login-get-free {
+          margin-right: 42px;
+          margin-bottom: 0px;
+          display: flex;
+      }
   }
 }
