--- a/Practice02/src/style/sass/pages/landingpage/_chart-section.scss
+++ b/Practice02/src/style/sass/pages/landingpage/_chart-section.scss
@@ -5,7 +5,7 @@
   height: 538px;
   margin-top: 27px;
   margin-right: 6px;
-  gap: 14px
+  gap: 14px;
 }
 
 .chart__content {
@@ -102,8 +102,6 @@
   .chart-image {
       width: 428.39px;
       height: 400.684px;
-      /*width: 596.39px;
-    height: 404.684px;*/
       margin-top: 0px;
       margin-left: 15px;
   }
@@ -130,6 +128,7 @@
       text-align: left;
       margin-top: 0px;
       margin-left: -8px;
+      margin-bottom: 7px;
   }
 
   .chart-button {
@@ -147,7 +146,7 @@
 @media only screen and (min-width: 1400px) {
   .chart__content {
       margin-right: 19px;
-      margin-top: 22px;
+      margin-top: 28px;
   }
 
   .chart-image {
