--- a/Practice02/src/style/sass/pages/landingpage/_about-us-section.scss
+++ b/Practice02/src/style/sass/pages/landingpage/_about-us-section.scss
@@ -2,7 +2,7 @@
   @extend %flex-column;
   justify-content: space-between;
   width: 100%;
-  margin-top: 50px;
+  margin-top: 52px;
 }
 
 .install-section {
@@ -15,18 +15,18 @@
   margin-top: 56px;
   margin-right: 12px;
   margin-left: 11px;
-}
 
-h3 {
-  color: var(--primary-color);
-  width: 86%;
-  font-family: 'Inter';
-  text-align: center;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 32px;
-  margin-top: -54px;
+  h3 {
+      color: var(--primary-color);
+      width: 86%;
+      font-family: 'Inter';
+      text-align: center;
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 32px;
+      margin-top: -54px;
+  }
 }
 
 .install-app {
@@ -34,12 +34,13 @@ h3 {
   display: flex;
   gap: 15px;
   flex-direction: column;
+
+  img {
+      width: 100%;
+      height: auto;
+  }
 }
 
-.install-app img {
-  width: 100%;
-  height: auto;
-}
 
 @media only screen and (min-width: 576px) {
   .install-section {
@@ -54,6 +55,19 @@ h3 {
       height: 224px;
       flex-direction: row;
       margin-top: 0px;
+
+      h3 {
+          width: 60%;
+          height: 96px;
+          text-align: left;
+          font-size: 32px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: 48px;
+          margin-left: 44px;
+          margin-bottom: 0px;
+          margin-top: 1px;
+      }
   }
 
   .about-us {
@@ -66,19 +80,6 @@ h3 {
       margin-bottom: 100px;
   }
 
-  h3 {
-      width: 60%;
-      height: 96px;
-      text-align: left;
-      font-size: 32px;
-      font-style: normal;
-      font-weight: 600;
-      line-height: 48px;
-      margin-left: 44px;
-      margin-bottom: 0px;
-      margin-top: 1px;
-  }
-
   .install-app {
       margin-left: 5px;
       margin-top: 8px;
@@ -86,7 +87,6 @@ h3 {
       gap: 24px;
       flex-direction: column;
       margin-right: 23px;
-
   }
 }
 
