--- a/Practice02/src/style/sass/pages/landingpage/_chart-section.scss
+++ b/Practice02/src/style/sass/pages/landingpage/_chart-section.scss
@@ -11,8 +11,33 @@
 .chart__content {
   @extend %flex-column;
   order: 2;
-  margin-bottom: 33px;
+  margin-bottom: 28px;
   gap: 14px;
+
+  h2 {
+    text-align: center;
+    width: 190px;
+    font-family: 'Inter';
+    color: var(--second);
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 24px;
+    margin-top: 18px;
+    margin-left: 8px;
+  }
+
+  p {
+    font-family: 'Inter';
+    color: var(--river-bed);
+    width: 75%;
+    font-size: 16px;
+    color: #4E5A65;
+    text-align: center;
+    font-weight: 400;
+    line-height: 24px;
+    margin-bottom: 2px;
+    margin-left: 8px;
+  }
 }
 
 .chart-image {
@@ -20,36 +45,10 @@
   height: 260.648px;
   margin-top: 61px;
   margin-left: 10px;
-}
-
-.chart-image img {
-  width: 100%;
-  height: 100%;
-}
-
-.chart__content h2 {
-  text-align: center;
-  width: 190px;
-  font-family: 'Inter';
-  color: var(--second);
-  font-size: 18px;
-  font-weight: 600;
-  line-height: 24px;
-  margin-top: 18px;
-  margin-left: 8px;
-}
-
-.chart__content p {
-  font-family: 'Inter';
-  color: var(--river-bed);
-  width: 75%;
-  font-size: 16px;
-  color: #4E5A65;
-  text-align: center;
-  font-weight: 400;
-  line-height: 24px;
-  margin-bottom: 2px;
-  margin-left: 8px;
+    img {
+    width: 100%;
+    height: 100%;
+    }
 }
 
 .chart-button {
@@ -97,6 +96,26 @@
       margin-bottom: 5px;
       margin-right: 2px;
       align-items: flex-start;
+
+      h2 {
+        text-align: left;
+        width: 341px;
+        height: 96px;
+        font-size: 40px;
+        font-weight: 600;
+        line-height: 48px;
+        margin-left: -8px;
+        margin-top: 23px;
+      }
+
+      p {
+        width: 415px;
+        color: #4E5A65;
+        text-align: left;
+        margin-top: 0px;
+        margin-left: -8px;
+        margin-bottom: 7px;
+      }
   }
 
   .chart-image {
@@ -104,31 +123,11 @@
       height: 400.684px;
       margin-top: 0px;
       margin-left: 15px;
-  }
-
-  .chart-image img {
-      width: 100%;
-      height: 100%;
-  }
-
-  .chart__content h2 {
-      text-align: left;
-      width: 341px;
-      height: 96px;
-      font-size: 40px;
-      font-weight: 600;
-      line-height: 48px;
-      margin-left: -8px;
-      margin-top: 23px;
-  }
-
-  .chart__content p {
-      width: 415px;
-      color: #4E5A65;
-      text-align: left;
-      margin-top: 0px;
-      margin-left: -8px;
-      margin-bottom: 7px;
+      
+      img {
+        width: 100%;
+        height: 100%;
+      }
   }
 
   .chart-button {
@@ -147,6 +146,11 @@
   .chart__content {
       margin-right: 19px;
       margin-top: 28px;
+
+      .chart-button {
+        margin-top: 0px;
+        margin-bottom: 44px;
+    }
   }
 
   .chart-image {
@@ -155,10 +159,5 @@
       width: 597px;
       height: 405px;
       margin-left: 0px;
-  }
-
-  .chart-button {
-      margin-top: 0px;
-      margin-bottom: 44px;
   }
 }
