--- a/Practice02/src/style/sass/pages/landingpage/_product-section.scss
+++ b/Practice02/src/style/sass/pages/landingpage/_product-section.scss
@@ -10,11 +10,11 @@
   width: 384px;
   height: 303.094px;
   margin-top: 29px;
-}
 
-.timeline img {
-  width: 100%;
-  height: 100%
+  img {
+      width: 100%;
+      height: 100%
+  }
 }
 
 @media only screen and (min-width: 576px) {
@@ -44,11 +44,11 @@
       height: 518px;
       margin-left: 10px;
       margin-top: 2px;
-  }
 
-  .timeline img {
-      width: 100%;
-      height: 100%
+      img {
+          width: 100%;
+          height: 100%
+      }
   }
 }
 
